--- a/berenstyle.css
+++ b/berenstyle.css
@@ -2,6 +2,7 @@ body{
 	background-color: #f3f3f3;
 	padding:0;
 	margin:0;
+	font-family:monospace;
 }
 
 .page {
@@ -9,12 +10,12 @@ body{
 	border: 2px solid black;
 	border-radius: 0px;
 	background-color: white;
-	overflow: hidden;
+	overflow: show;
 }
 
 .main-nav{
 	background-image:url(https://upload.wikimedia.org/wikipedia/commons/7/71/2010-kodiak-bear-1.jpg);
-	background-repeat:no-repeat;
+	background-repeat:repeat;
 	background-size:cover;
 	background-position:center -120px;
 	padding: 100px 20px 100px 20px;
@@ -34,7 +35,7 @@ body{
 }
 
 .main-nav a:hover{
-	top:5px;
+	top:95px;
 }
 
 .page-content{
@@ -49,7 +50,7 @@ h1{
 }
 
 h2{
-  font-family:Georgia;
+  font-family:monospace;
 }
 
 .top-nav ul{
