--- a/berenstyle.css
+++ b/berenstyle.css
@@ -10,7 +10,7 @@ body{
 	border: 2px solid black;
 	border-radius: 0px;
 	background-color: white;
-	overflow: show;
+	overflow: hidden;
 }
 
 .main-nav{
