--- a/berenstyle.css
+++ b/berenstyle.css
@@ -1,7 +1,8 @@
 body{
 	background-color: #f3f3f3;
-	padding:200px;
-	margin:0;
+	padding:10px;
+	margin-left:220;
+	margin-right:220;
 	font-family:monospace;
 }
 
@@ -44,7 +45,7 @@ body{
 
 h1{
 	background-color: #b68052;
-	margin: 20px;
+	margin: -10px;
 	padding: 10px 20px;
 	color: aliceblue;
 }
