--- a/berenstyle.css
+++ b/berenstyle.css
@@ -1,6 +1,6 @@
 body{
 	background-color: #f3f3f3;
-	padding:10px;
+	padding:0px;
 	margin-left:220;
 	margin-right:220;
 	font-family:monospace;
@@ -69,3 +69,7 @@ h2{
 }
 
 a{text-decoration: none;}
+
+.video {
+	margin: -10px;
+}
